--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@
 .detailed-view-bg-container {
     background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/seabg.png");
     background-size: cover;
+    height: 100vh;
     padding: 20px;
 }
 
